# tinytasks

./: CMakeLists.txt  main.cpp  tests.cpp
task/: ContinuationHolder.cpp  ContinuationHolder.h  Queue.h  Scheduler.cpp  Scheduler.h  Task.h
